@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 0.5.14 September 14, 2014
+
+* add generator for Upmin for an admin interface
+
 h3. 0.5.13 August 27, 2014
 
 * support 'rails-devise-roles' example application
